website: fixes text overflow of var sample on entry page

--- a/docs/index-var.css
+++ b/docs/index-var.css
@@ -5,6 +5,7 @@
   --var-letterSpacing: -0.03em;
   --var-lineHeight: 1.1;
   text-align: center;
+  overflow-wrap: break-word;
 }
 @supports (font-variation-settings: normal) {
   .variable-sample {
